Adding masks for gcc3 and Mach-O builds for NPAPI variables that pass interface pointers, bug 182117 r=beard,cls sr=sfraser